--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "node-fetch": "^2.6.9"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.0.0"
   }
 }
